Update gluon config