@@ -49,7 +49,7 @@ extraJavaModuleInfo {
 dependencies {
 
     // Gluon
-//    implementation "com.gluonhq:charm-glisten:6.1.0"
+    implementation "com.gluonhq:charm-glisten:6.1.0"
 
     implementation 'org.jetbrains:annotations:22.0.0'
 
@@ -94,7 +94,6 @@ dependencies {
 
     // Unique4J
     implementation 'tk.pratanumandal:unique4j:1.4'
-
 
 }
 
@@ -209,5 +208,132 @@ jlink {
             else if (installerType == 'rpm') installerOptions += ['--linux-rpm-license-type', 'Apache-2.0']
         }
     }
+    mergedModule{
+
+        // JBig2
+        uses "org.apache.pdfbox.jbig2.util.log.LoggerBridge";
+        uses "org.apache.pdfbox.jbig2.util.cache.CacheBridge";
+
+        // Generated automatically by gradle
+        requires 'java.logging';
+        requires 'jdk.xml.dom';
+        requires 'java.sql';
+        requires 'java.xml';
+        requires 'java.desktop'; // needed for jbig2 LoggerBridge
+        uses 'javax.imageio.spi.ImageWriterSpi';
+        provides 'org.apache.xmlgraphics.image.loader.spi.ImageConverter' with 'org.apache.xmlgraphics.image.loader.impl.ImageConverterBitmap2G2D',
+                'org.apache.xmlgraphics.image.loader.impl.ImageConverterBuffered2Rendered',
+                'org.apache.xmlgraphics.image.loader.impl.ImageConverterG2D2Bitmap',
+                'org.apache.xmlgraphics.image.loader.impl.ImageConverterRendered2PNG';
+        provides 'javax.imageio.spi.ImageOutputStreamSpi' with 'com.github.jaiimageio.impl.stream.ChannelImageOutputStreamSpi';
+        provides 'org.apache.xmlgraphics.image.writer.ImageWriter' with 'org.apache.xmlgraphics.image.writer.imageio.ImageIOJPEGImageWriter',
+                'org.apache.xmlgraphics.image.writer.imageio.ImageIOPNGImageWriter',
+                'org.apache.xmlgraphics.image.writer.imageio.ImageIOTIFFImageWriter',
+                'org.apache.xmlgraphics.image.writer.internal.PNGImageWriter',
+                'org.apache.xmlgraphics.image.writer.internal.TIFFImageWriter';
+        provides 'javax.imageio.spi.ImageReaderSpi' with 'com.github.jaiimageio.impl.plugins.bmp.BMPImageReaderSpi',
+                'com.github.jaiimageio.impl.plugins.pcx.PCXImageReaderSpi',
+                'com.github.jaiimageio.impl.plugins.pnm.PNMImageReaderSpi',
+                'com.github.jaiimageio.impl.plugins.raw.RawImageReaderSpi',
+                'com.github.jaiimageio.impl.plugins.tiff.TIFFImageReaderSpi',
+                'com.github.jaiimageio.impl.plugins.wbmp.WBMPImageReaderSpi',
+                'com.github.jaiimageio.jpeg2000.impl.J2KImageReaderSpi',
+                'org.apache.pdfbox.jbig2.JBIG2ImageReaderSpi';
+        provides 'org.apache.xmlgraphics.image.loader.spi.ImageLoaderFactory' with 'org.apache.xmlgraphics.image.loader.impl.ImageLoaderFactoryEPS',
+                'org.apache.xmlgraphics.image.loader.impl.ImageLoaderFactoryInternalTIFF',
+                'org.apache.xmlgraphics.image.loader.impl.ImageLoaderFactoryPNG',
+                'org.apache.xmlgraphics.image.loader.impl.ImageLoaderFactoryRaw',
+                'org.apache.xmlgraphics.image.loader.impl.ImageLoaderFactoryRawCCITTFax',
+                'org.apache.xmlgraphics.image.loader.impl.imageio.ImageLoaderFactoryImageIO';
+        provides 'org.apache.xmlgraphics.image.loader.spi.ImagePreloader' with 'org.apache.xmlgraphics.image.loader.impl.PreloaderBMP',
+                'org.apache.xmlgraphics.image.loader.impl.PreloaderEMF',
+                'org.apache.xmlgraphics.image.loader.impl.PreloaderEPS',
+                'org.apache.xmlgraphics.image.loader.impl.PreloaderGIF',
+                'org.apache.xmlgraphics.image.loader.impl.PreloaderJPEG',
+                'org.apache.xmlgraphics.image.loader.impl.PreloaderRawPNG',
+                'org.apache.xmlgraphics.image.loader.impl.PreloaderTIFF',
+                'org.apache.xmlgraphics.image.loader.impl.imageio.PreloaderImageIO';
+        provides 'javax.imageio.spi.ImageInputStreamSpi' with 'com.github.jaiimageio.impl.stream.ChannelImageInputStreamSpi';
+        provides 'javax.xml.transform.URIResolver' with 'org.apache.xmlgraphics.util.uri.DataURIResolver';
+        provides 'org.apache.pdfbox.jbig2.util.log.LoggerBridge' with 'org.apache.pdfbox.jbig2.util.log.JDKLoggerBridge';
+        provides 'javax.imageio.spi.ImageWriterSpi' with 'com.github.jaiimageio.impl.plugins.bmp.BMPImageWriterSpi',
+                'com.github.jaiimageio.impl.plugins.gif.GIFImageWriterSpi',
+                'com.github.jaiimageio.impl.plugins.pcx.PCXImageWriterSpi',
+                'com.github.jaiimageio.impl.plugins.pnm.PNMImageWriterSpi',
+                'com.github.jaiimageio.impl.plugins.raw.RawImageWriterSpi',
+                'com.github.jaiimageio.impl.plugins.tiff.TIFFImageWriterSpi',
+                'com.github.jaiimageio.impl.plugins.wbmp.WBMPImageWriterSpi',
+                'com.github.jaiimageio.jpeg2000.impl.J2KImageWriterSpi';
+        provides 'org.apache.pdfbox.jbig2.util.cache.CacheBridge' with 'org.apache.pdfbox.jbig2.util.cache.SoftReferenceCacheBridge';
+    }
 }
+
+gluonfx {
+    target = "host"
+    //target = "android"
+
+    attachConfig {
+        version = "4.0.10"
+        services 'display', 'lifecycle', 'statusbar', 'storage'
+    }
+
+    bundlesList = ['com/sun/glass/ui/win/themes']
+    resourcesList = ["src/main/resources", 'impl/jfxtras/styles/jmetro']
+    reflectionList = []
+    jniList = ["com.sun.glass.ui.win.WinView"]
+
+
+
+    compilerArgs = [
+            '--allow-incomplete-classpath',
+            '--enable-https'
+    ]
+    runtimeArgs = [
+            '--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls',
+            '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls'
+    ]
+
+    javaStaticSdkVersion = "18-ea+2"
+    javafxStaticSdkVersion = "18-ea+2"
+    if (os.windows) graalvmHome = "C:\\Program Files\\AdoptOpenJDK\\graalvm-ce-java17-22.0.0.2"
+    else if (os.macOsX) graalvmHome = "undefined"
+    else if (os.linux) graalvmHome = "/opt/graalvm-ce-java17-21.3.0"
+    System.out.println("Using GraalVM: ".concat(graalvmHome))
+
+
+    verbose = false
+    enableSwRendering = false
+
+    /*remoteHostName = ""
+    remoteDir = ""*/
+
+    release {
+        // Android
+        appLabel = "PDF4Teachers"
+        versionCode = "3"
+        versionName = "1.3.1"
+        /*providedKeyStorePath = ""
+        providedKeyStorePassword = ""
+        providedKeyAlias = ""
+        providedKeyAliasPassword = ""*/
+
+        // iOS
+        /*bundleName = ""
+        bundleVersion = ""
+        bundleShortVersion = ""
+        providedSigningIdentity = ""
+        providedProvisioningProfile = ""
+        skipSigning = false*/
+    }
+}
+
+/*
+
+cd C:\Users\Clement\Developpement\Java\PDF4Teachers
+set JAVA_HOME=C:\Program Files\AdoptOpenJDK\jdk-17.0.1.12-hotspot
+gradlew nativeBuild
+
+*/
+
+
 
